# surfhamster

./: .gitignore  Dockerfile  README.md  agent.yaml  pyproject.toml
surfhamster/: agent.py  image.py  ocr.py  server.py  tool.py
