
[tool.poetry]
name = "SurfHamster"
version = "0.1.0"
description = "AI agent for The AI agent that can navigate GUIs and do tasks in them."
authors = ["Mariya Davydova <mrs.mariya.davydova@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "surfhamster"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.27"
pydantic = "^2.6.3"
requests = "^2.31.0"
fastapi = {version = "^0.109", extras = ["all"]}
surfkit = "^0.1.206"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.2.0"
pytest = "^8.0.2"
ipykernel = "^6.29.3"
pytest-env = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
